--- a/css/reset.css
+++ b/css/reset.css
@@ -7,6 +7,7 @@
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
   margin: 0;
+  padding-top: var(--sbne-nav-height);
 }
 
 ul {
